--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <script>
     window.onload = function () {
-      const map = L.map("map").setView([46.0569, 14.5058], 8);
+      const map = L.map("map", { maxZoom: 18 }).setView([46.0569, 14.5058], 8);
 
       let path = [];
       let polyline = L.polyline(path, { color: "blue" }).addTo(map);
