--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
             longitude
           );
           if (dist > 0) totalDistance += dist;
-          distanceEl.textContent = `${totalDistance.toFixed
+          distanceEl.textContent = `${totalDistance.toFixed(2)} km`;
           distanceEl.textContent = `${totalDistance.toFixed(2)} m`;
         }
 
